--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -301,7 +301,8 @@ jobs:
   Flutter-Testing:
     name: Testing codebase
     runs-on: ubuntu-latest
-    needs: [Flutter-Codebase-Check, Python-Compliance, check-unused-dependencies]
+    needs:
+      [Flutter-Codebase-Check, Python-Compliance, check-unused-dependencies]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -462,7 +463,7 @@ jobs:
         uses: subosito/flutter-action@v2
         with:
           flutter-version: ${{ env.FLUTTER_VERSION }}
-          channel: 'stable'
+          channel: "stable"
 
       - name: Cache Flutter dependencies
         uses: actions/cache@v4
