--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -304,6 +304,30 @@ jobs:
         working-directory: ./docs
         run: npm run build
 
+  Docker-Validation:
+    name: Docker Build and Validation
+    runs-on: ubuntu-latest
+    needs: Flutter-Testing
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and start services with Docker Compose
+        run: docker-compose up -d --build 
+
+      - name: Validate Flutter setup inside container
+        run: docker-compose exec -T talawa-mobile flutter doctor
+
+      - name: Build APK inside container to prove app can start
+        run: docker-compose exec -T talawa-mobile flutter build apk --debug --no-tree-shake-icons  
+
+      - name: Stop services
+        if: always()  
+        run: docker-compose down
+
+      
   Python-Compliance:
     name: Check Python Code Style
     runs-on: ubuntu-latest
