minor fixes done

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -315,17 +315,18 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build and start services with Docker Compose
-        run: docker-compose up -d --build 
+        run: docker compose up -d --build 
 
       - name: Validate Flutter setup inside container
-        run: docker-compose exec -T talawa-mobile flutter doctor
-
+        run: |
+          docker compose exec -T talawa-mobile flutter doctor
+          docker compose exec -T talawa-mobile flutter doctor | grep -q "No issues found" || echo "Warning: Flutter doctor reported issues"
       - name: Build APK inside container to prove app can start
-        run: docker-compose exec -T talawa-mobile flutter build apk --debug --no-tree-shake-icons  
+        run: docker compose exec -T talawa-mobile flutter build apk --debug --no-tree-shake-icons  
 
       - name: Stop services
         if: always()  
-        run: docker-compose down
+        run: docker compose down
 
       
   Python-Compliance:
