--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -317,24 +317,36 @@ jobs:
       - name: Build and start services with Docker Compose
         run: |
           docker compose up -d --build
-          # Wait for container to be ready
-          timeout 60 bash -c 'until docker compose exec -T talawa-mobile flutter --version > /dev/null 2>&1; do sleep 2; done' || (echo "Container failed to become ready" && exit 1)
+          # Wait for container to be ready with extended timeout and better logging
+          echo "Waiting for Flutter to be ready in container..."
+          timeout 120 bash -c 'until docker compose exec -T talawa-mobile flutter --version > /dev/null 2>&1; do echo "Still waiting..."; sleep 5; done' || {
+            echo "Error: Container failed to become ready within 120 seconds"
+            echo "Container logs:"
+            docker compose logs talawa-mobile
+            exit 1
+          }
 
       - name: Validate Flutter setup inside container
         run: |
-          # Run flutter doctor and capture output and exit code
-          if ! docker compose exec -T talawa-mobile flutter doctor > /tmp/flutter_doctor.txt 2>&1; then
+          # Run flutter doctor and display output
+          echo "Running flutter doctor..."
+          if ! docker compose exec -T talawa-mobile flutter doctor 2>&1 | tee /tmp/flutter_doctor.txt; then
             echo "Error: Flutter doctor failed"
             exit 1
           fi
+          # Display captured output for debugging
+          echo "Flutter doctor output:"
+          cat /tmp/flutter_doctor.txt
           # Check for issues (optional warning, doesn't fail the step)
-          grep -q "No issues found" /tmp/flutter_doctor.txt || echo "⚠️ Warning: Flutter doctor reported non-critical issues"
-          
-      - name: Build APK inside container to prove app can start
+          if ! grep -q "No issues found" /tmp/flutter_doctor.txt; then
+            echo "⚠️ Warning: Flutter doctor reported non-critical issues. Review output above."
+          fi
+
+      - name: Build APK inside container to validate build toolchain
         run: docker compose exec -T talawa-mobile flutter build apk --debug --no-tree-shake-icons  
 
       - name: Stop services
-        if: always()  
+        if: always()
         run: docker compose down
 
       
