--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -314,9 +314,18 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Cache Docker layers
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ hashFiles('**/Dockerfile') }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+
       - name: Build and start services with Docker Compose
         run: |
-          docker compose up -d --build
+          DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker compose build --build-arg BUILDKIT_INLINE_CACHE=1
+          docker compose up -d
           # Wait for container to be ready with extended timeout and better logging
           echo "Waiting for Flutter to be ready in container..."
           timeout 120 bash -c 'until docker compose exec -T talawa-mobile flutter --version > /dev/null 2>&1; do echo "Still waiting..."; sleep 5; done' || {
@@ -337,9 +346,10 @@ jobs:
           # Display captured output for debugging
           echo "Flutter doctor output:"
           cat /tmp/flutter_doctor.txt
-          # Check for issues (optional warning, doesn't fail the step)
+          # Check for issues and fail if any are found
           if ! grep -q "No issues found" /tmp/flutter_doctor.txt; then
-            echo "⚠️ Warning: Flutter doctor reported non-critical issues. Review output above."
+            echo "❌ Error: Flutter doctor reported issues. Review output above."
+            exit 1
           fi
 
       - name: Build APK inside container to validate build toolchain
