made the use of Docker cache and made flutter doctor informational only

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -324,8 +324,13 @@ jobs:
 
       - name: Build and start services with Docker Compose
         run: |
-          DOCKER_BUILDKIT=1 COMPOSE_DOCKER_CLI_BUILD=1 docker compose build --build-arg BUILDKIT_INLINE_CACHE=1
-          docker compose up -d
+          docker buildx bake \
+          --file docker-compose.yml \
+          --set "*.cache-from=type=local,src=/tmp/.buildx-cache" \
+          --set "*.cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max"
+          # Move cache to avoid unbounded growth
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache          docker compose up -d
           # Wait for container to be ready with extended timeout and better logging
           echo "Waiting for Flutter to be ready in container..."
           timeout 120 bash -c 'until docker compose exec -T talawa-mobile flutter --version > /dev/null 2>&1; do echo "Still waiting..."; sleep 5; done' || {
@@ -339,18 +344,11 @@ jobs:
         run: |
           # Run flutter doctor and display output
           echo "Running flutter doctor..."
-          if ! docker compose exec -T talawa-mobile flutter doctor 2>&1 | tee /tmp/flutter_doctor.txt; then
-            echo "Error: Flutter doctor failed"
-            exit 1
-          fi
-          # Display captured output for debugging
+          docker compose exec -T talawa-mobile flutter doctor 2>&1 | tee /tmp/flutter_doctor.txt || echo "⚠️ Flutter doctor reported issues (non-fatal)"
+
           echo "Flutter doctor output:"
           cat /tmp/flutter_doctor.txt
-          # Check for issues and fail if any are found
-          if ! grep -q "No issues found" /tmp/flutter_doctor.txt; then
-            echo "❌ Error: Flutter doctor reported issues. Review output above."
-            exit 1
-          fi
+          
 
       - name: Build APK inside container to validate build toolchain
         run: docker compose exec -T talawa-mobile flutter build apk --debug --no-tree-shake-icons  
