--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -330,7 +330,8 @@ jobs:
           --set "*.cache-to=type=local,dest=/tmp/.buildx-cache-new,mode=max"
           # Move cache to avoid unbounded growth
           rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache          docker compose up -d
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          docker compose up -d
           # Wait for container to be ready with extended timeout and better logging
           echo "Waiting for Flutter to be ready in container..."
           timeout 120 bash -c 'until docker compose exec -T talawa-mobile flutter --version > /dev/null 2>&1; do echo "Still waiting..."; sleep 5; done' || {
