--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,7 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   hive_generator: ^2.0.1
+  dependency_validator: ^4.1.0
 
   json_serializable: ^6.8.0
   lint: ^2.7.0
