--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   flutter_svg: ^2.1.0
   font_awesome_flutter: ^10.8.0
   get_it: ^8.0.3
-  graphql_flutter: ^5.2.0-beta.8
+  graphql_flutter: ^5.2.1
   hive: ^2.2.3
   http: ^1.3.0
   image_cropper: 9.1.0
@@ -131,7 +131,7 @@ dependency_overrides:
   # 1. Fork hive_generator to support analyzer 7.x
   # 2. Migrate to alternative code generation (e.g., freezed, json_serializable for persistence)
   # 3. Wait for hive_generator release supporting analyzer 7.x
-  analyzer: ^6.4.0  # Allow patch updates within <7.0.0 while staying compatible with custom_lint 0.6.6 and hive_generator 2.0.1
+  analyzer: ^6.4.0  # Align with custom_lint 0.6.6 minimum and allow patch updates within <7.0.0
   custom_lint_builder: ^0.6.6  # Matches custom_lint 0.6.6 version
   intl: ^0.20.2  # Allow patch updates while staying on the verified 0.20.x line
   rxdart: ^0.27.7  # Transitive via graphql_flutter/gql; allow patch updates but stay within 0.27.x
