--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,6 @@ dependencies:
   app_links_platform_interface: ^2.0.2
   auto_size_text: ^3.0.0
   cached_network_image: ^3.4.1
-  clock: ^1.1.1
   connectivity_plus: ^6.1.4
   contained_tab_bar_view: ^0.8.0
 
@@ -59,7 +58,6 @@ dependencies:
   mockito: ^5.4.4
   path_provider: ^2.1.5
   permission_handler: 11.3.1
-  plugin_platform_interface: ^2.1.7
   pointycastle: ^4.0.0
   provider: ^6.1.2
   qr_code_scanner_plus: ^2.0.9+1
@@ -73,12 +71,14 @@ dependencies:
   timelines_plus: ^1.0.6
   tutorial_coach_mark: ^1.3.0
   url_launcher: ^6.3.1
+  uuid: ^4.5.1
   vibration: ^2.0.1
   video_player: ^2.9.3
   visibility_detector: ^0.4.0+2
 
 dev_dependencies:
   build_runner: ^2.4.15
+  clock: ^1.1.1
   custom_lint: ^0.6.6
   dependency_validator: ^4.1.0
   fake_async: ^1.3.1
@@ -94,6 +94,7 @@ dev_dependencies:
   mocktail_image_network: ^1.2.0
   network_image_mock: ^2.1.1
   normalize: ^0.9.1
+  plugin_platform_interface: ^2.1.7
   talawa_lint:
     path: talawa_lint/
 
