docs: clarify analyzer version constraint comment

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -131,7 +131,7 @@ dependency_overrides:
   # 1. Fork hive_generator to support analyzer 7.x
   # 2. Migrate to alternative code generation (e.g., freezed, json_serializable for persistence)
   # 3. Wait for hive_generator release supporting analyzer 7.x
-  analyzer: ^6.4.0  # Stays within <7.0.0; pub get fails on ^6.6.0 with current hive_generator/custom_lint setup
+  analyzer: ^6.4.0  # Fixed at 6.4.x to avoid pub get failure; hive_generator 2.0.1 incompatible with analyzer >=7.0.0
   custom_lint_builder: ^0.6.6  # Matches custom_lint 0.6.6 version
   intl: ^0.20.2  # Allow patch updates while staying on the verified 0.20.x line
   rxdart: ^0.27.7  # Transitive via graphql_flutter/gql; allow patch updates but stay within 0.27.x
