--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,8 +19,7 @@ dependencies:
   # analyzer_plugin:
   ################################
 
-  app_links: ^6.3.3
-  app_links_platform_interface: ^2.0.2
+  app_links: ^6.3.3 
   auto_size_text: ^3.0.0
   cached_network_image: ^3.4.1
   connectivity_plus: ^6.1.4
@@ -36,36 +35,30 @@ dependencies:
 
   flutter:
     sdk: flutter
-  flutter_braintree: ^4.0.0
   flutter_cache_manager: ^3.4.1
   flutter_dotenv: ^5.1.0
   flutter_image_compress: ^2.1.0
-  flutter_local_notifications: ^18.0.1
   flutter_localizations:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
-  flutter_speed_dial: ^7.0.0
   flutter_svg: ^2.1.0
-  font_awesome_flutter: ^10.8.0
   get_it: ^8.0.3
   graphql_flutter: ^5.2.1
   hive: ^2.2.3
   http: ^1.3.0
-  image_cropper: 9.1.0
+  image_cropper: ^9.1.0
   image_picker: ^1.1.2
   intl: ^0.20.2 
-  json_annotation: ^4.7.0
   mockito: ^5.4.4
   path_provider: ^2.1.5
-  permission_handler: 11.3.1
+  permission_handler: ^11.3.1
   pointycastle: ^4.0.0
   provider: ^6.1.2
   qr_code_scanner_plus: ^2.0.9+1
-  qr_flutter: 4.1.0
+  qr_flutter: ^4.1.0
   quick_actions: ^1.1.0
   shared_preferences: ^2.5.3
-  shimmer: ^3.0.0
-  stack_trace: ^1.11.1
+  shimmer: ^3.0.0 
   syncfusion_flutter_calendar: ^28.2.12
   syncfusion_flutter_datepicker: ^28.2.3
   timelines_plus: ^1.0.6
@@ -77,6 +70,9 @@ dependencies:
   visibility_detector: ^0.4.0+2
 
 dev_dependencies:
+  analyzer: ^6.4.0
+  analyzer_plugin: ^0.11.0
+  args: ^2.4.2 
   build_runner: ^2.4.15
   clock: ^1.1.1
   dependency_validator: ^4.1.0
