--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,14 +10,23 @@ homepage: https://github.com/PalisadoesFoundation/talawa
 
 repository: https://github.com/PalisadoesFoundation/talawa
 environment:
-  sdk: ">=2.17.0 <=3.8.1"
+  sdk: ">=2.17.0 <4.0.0"
 
+dependency_overrides:
+  # Intentional override to resolve diamond dependency conflict between:
+  # - hive_generator (requires analyzer >=4.6.0 <7.0.0)
+  # - talawa_lint (requires analyzer >=6.4.0 <8.0.0)
+  # - Flutter SDK (requires newer analyzer)
+  #
+  # Targeted range <8.0.0 is used to prevent breaking changes in talawa_lint
+  # while satisfying other dependencies.
+  # Revisit this when hive_generator is updated to support analyzer >=7.0.0.
+  analyzer: ">=6.0.0 <7.0.0"
+  dart_style: 2.3.6
 dependencies:
-  ############# Remove ###########
   # _fe_analyzer_shared: ^60.0.0
   # analyzer:
   # analyzer_plugin:
-  ################################
 
   app_links: ^6.4.1
   auto_size_text: ^3.0.0
@@ -70,15 +79,15 @@ dependencies:
   visibility_detector: ^0.4.0+2
 
 dev_dependencies:
-  _fe_analyzer_shared: ^76.0.0
-  analyzer: ^6.11.0
-  analyzer_plugin: ^0.11.3
+  _fe_analyzer_shared: any
+  analyzer: any
+  analyzer_plugin: ">=0.11.3 <0.14.0"
   args: ^2.7.0
-  build_runner: ^2.5.4
+  build_runner: ^2.4.13
   clock: ^1.1.2
-  custom_lint: 0.7.0
-  custom_lint_builder: ^0.7.0
-  dependency_validator: ^4.1.3
+  custom_lint: 0.6.4
+  custom_lint_builder: 0.6.4
+  dependency_validator: ^5.0.0
   fake_async: ^1.3.1
   file: ^7.0.1
   flutter_test:
@@ -95,11 +104,11 @@ dev_dependencies:
   network_image_mock: ^2.1.1
   normalize: ^0.9.1
   plugin_platform_interface: ^2.1.8
+
   talawa_lint:
     path: talawa_lint/
 
   url_launcher_platform_interface: 2.3.2
-
 flutter:
   uses-material-design: true
   assets:
