--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -108,7 +108,7 @@ jobs:
       - name: Running pub get to fetch dependencies
         run: flutter pub get
       - name: Codebase testing
-        run: flutter test --coverage
+        run: flutter test --concurrency=$(nproc) --coverage
       - name: Remove generated files from coverage
         run: |
           sed -i '/\.g\.dart/d' coverage/lcov.info
