--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -14,6 +14,7 @@ reviews:
   request_changes_workflow: true
   high_level_summary: true
   review_status: true
+  review_details: false
   collapse_walkthrough: false
   auto_review:
     enabled: true
