--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -15,6 +15,8 @@ reviews:
   high_level_summary: true
   review_status: true
   review_details: false
+  auto_apply_labels: false
+  suggested_labels: false
   collapse_walkthrough: false
   auto_review:
     enabled: true
