--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
     sdk: flutter
   flutter_secure_storage: ^9.2.4
   flutter_svg: ^2.2.3
+  flutter_windowmanager_plus: ^1.0.1
   get_it: ^9.2.0
   graphql_flutter: ^5.2.1
   hive: ^2.2.3
