--- a/talawa_lint/pubspec.yaml
+++ b/talawa_lint/pubspec.yaml
@@ -1,7 +1,7 @@
 # pubspec.yaml
 name: talawa_lint
 environment:
-  sdk: ">=2.12.0 <4.0.0"
+  sdk: ">=3.2.0 <4.0.0"
 
 dev_dependencies:
   lint: ^2.3.0
@@ -9,13 +9,13 @@ dev_dependencies:
 dependencies:
   # we will use analyzer for inspecting Dart files
   # _fe_analyzer_shared: ^61.0.0
+  _fe_analyzer_shared: ^67.0.0
   analyzer: ">=6.4.0 <8.0.0"
   analyzer_plugin: ">=0.11.3 <0.14.0"
-  # args:
   
+  # args:
   # custom_lint_builder will give us tools for writing lints
   args: ^2.4.2
   custom_lint: 0.6.4
   custom_lint_builder: 0.6.4
   # watcher: ^1.1.0
-  
