--- a/talawa_lint/pubspec.yaml
+++ b/talawa_lint/pubspec.yaml
@@ -9,13 +9,12 @@ dev_dependencies:
 dependencies:
   # we will use analyzer for inspecting Dart files
   # _fe_analyzer_shared: ^61.0.0
-  analyzer: ">=5.12.0 <=7.3.0"
-  analyzer_plugin: ^0.11.0
+  analyzer: any
+  analyzer_plugin: any
   # args:
-  
+
   # custom_lint_builder will give us tools for writing lints
   args: ^2.4.2
-  custom_lint: 0.7.0
-  custom_lint_builder: ^0.7.0
+  custom_lint: any
+  custom_lint_builder: any
   # watcher: ^1.1.0
-  
