--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -24,6 +24,7 @@ env:
   # Test concurrency: defaults to nproc, capped at 4 (override if needed)
   # Note: Flutter 3.32.x may have --concurrency flag behavior issues
   FLUTTER_TEST_CONCURRENCY: 4
+  TOTAL_SHARDS: 4
 
 jobs:
   Merge-Conflict-Check:
@@ -92,10 +93,13 @@ jobs:
 
   Flutter-Testing:
     if: ${{ github.actor != 'dependabot[bot]' }}
-    name: Testing codebase
+    name: Run tests (Shard ${{ matrix.shard }})
     runs-on: ubuntu-latest
     needs: Flutter-Codebase-Check
-    # needs: Update-Documentation
+    strategy:
+      fail-fast: false
+      matrix:
+        shard: [1, 2, 3, 4]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -110,20 +114,86 @@ jobs:
         run: cd talawa_lint && flutter pub get && cd ..
       - name: Running pub get to fetch dependencies
         run: flutter pub get
-      - name: Codebase testing
+      - name: Run tests (shard ${{ matrix.shard }}/${{ env.TOTAL_SHARDS }})
         run: |
           CONCURRENCY="${FLUTTER_TEST_CONCURRENCY:-$(nproc)}"
           if [ "$CONCURRENCY" -gt 4 ]; then CONCURRENCY=4; fi
-          flutter test --concurrency="$CONCURRENCY" --coverage
+          flutter test --concurrency="$CONCURRENCY" \
+            --shard-index=${{ matrix.shard }} \
+            --total-shards=${{ env.TOTAL_SHARDS }} \
+            --coverage
       - name: Remove generated files from coverage
+        if: always()
         run: |
           sed -i '/\.g\.dart/d' coverage/lcov.info
+      - name: Upload coverage artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: coverage-shard-${{ matrix.shard }}
+          path: ./coverage/
+          retention-days: 1
+
+  Merge-Coverage:
+    name: Merge Coverage Reports
+    runs-on: ubuntu-latest
+    needs: [Flutter-Testing]
+    if: success()
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: "zulu"
+          java-version: "17.0"
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: ${{ env.FLUTTER_VERSION }}
+          channel: "stable"
+      - name: Download all coverage artifacts
+        id: download-artifacts
+        continue-on-error: true
+        uses: actions/download-artifact@v4
+        with:
+          pattern: coverage-shard-*
+          path: ./coverage-shards/
+          merge-multiple: false
+      - name: Check if artifacts were downloaded
+        id: check-artifacts
+        run: |
+          if find coverage-shards -name "lcov.info" -type f | grep -q .; then
+            echo "artifacts_found=true" >> $GITHUB_OUTPUT
+            echo "Coverage artifacts found"
+          else
+            echo "artifacts_found=false" >> $GITHUB_OUTPUT
+            echo "No coverage artifacts found"
+            exit 1
+          fi
+      - name: Merge coverage reports
+        if: steps.check-artifacts.outputs.artifacts_found == 'true'
+        run: |
+          mkdir -p ./coverage
+          echo "Merging coverage from shards..."
+          find coverage-shards -name "lcov.info" -type f > lcov-files.txt
+          if [ ! -s lcov-files.txt ]; then
+            echo "ERROR: No lcov.info files found"
+            exit 1
+          fi
+          echo "Found lcov files:"
+          cat lcov-files.txt
+          cat $(cat lcov-files.txt) > ./coverage/lcov.info
+          echo "Merged coverage file size: $(wc -c < ./coverage/lcov.info) bytes"
+          SF_COUNT=$(grep -c "^SF:" ./coverage/lcov.info || echo "0")
+          echo "Number of files in merged coverage: $SF_COUNT"
+          if [ "$SF_COUNT" -lt 50 ]; then
+            echo "::warning::Only $SF_COUNT files in coverage (expected 50+)"
+          fi
 
       #######################################################################
       # DO NOT DELETE ANY references to env.CODECOV_UNIQUE_NAME in this
       # section. They are required for accurate calculations
       #######################################################################
       - name: Present and upload coverage to Codecov as ${{env.CODECOV_UNIQUE_NAME}}
+        if: steps.check-artifacts.outputs.artifacts_found == 'true'
         uses: codecov/codecov-action@v5
         with:
           name: "${{env.CODECOV_UNIQUE_NAME}}"
@@ -132,6 +202,7 @@ jobs:
           verbose: true
           exclude: "docs/"
           gcov_ignore: "docs/"
+          files: ./coverage/lcov.info
 
   Android-Build-and-Release:
     if: ${{ github.actor != 'dependabot[bot]' }}
@@ -140,7 +211,7 @@ jobs:
       contents: write
     environment: TALAWA_ENVIRONMENT
     runs-on: ubuntu-latest
-    needs: Flutter-Testing
+    needs: Merge-Coverage
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
