--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -319,7 +319,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shard: [1, 2, 3, 4]
+        shard: [0, 1, 2, 3]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -357,7 +357,7 @@ jobs:
     name: Merge Coverage Reports
     runs-on: ubuntu-latest
     needs: [Flutter-Testing]
-    if: success()
+    if: ${{ !cancelled() }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
@@ -387,6 +387,10 @@ jobs:
             echo "No coverage artifacts found"
             exit 1
           fi
+      - name: Install lcov
+        if: steps.check-artifacts.outputs.artifacts_found == 'true'
+        run: sudo apt-get update && sudo apt-get install -y lcov
+
       - name: Merge coverage reports
         if: steps.check-artifacts.outputs.artifacts_found == 'true'
         run: |
@@ -399,7 +403,21 @@ jobs:
           fi
           echo "Found lcov files:"
           cat lcov-files.txt
-          cat $(cat lcov-files.txt) > ./coverage/lcov.info
+
+          # Properly merge using lcov to avoid duplicate entries
+          FIRST_FILE=true
+          while IFS= read -r file; do
+            if [ "$FIRST_FILE" = true ]; then
+              cp "$file" ./coverage/lcov.info
+              FIRST_FILE=false
+            else
+              lcov --add-tracefile ./coverage/lcov.info \
+                   --add-tracefile "$file" \
+                   --output-file ./coverage/lcov.info.tmp
+              mv ./coverage/lcov.info.tmp ./coverage/lcov.info
+            fi
+          done < lcov-files.txt
+
           echo "Merged coverage file size: $(wc -c < ./coverage/lcov.info) bytes"
           SF_COUNT=$(grep -c "^SF:" ./coverage/lcov.info || echo "0")
           echo "Number of files in merged coverage: $SF_COUNT"
