--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -357,7 +357,7 @@ jobs:
     name: Merge Coverage Reports
     runs-on: ubuntu-latest
     needs: [Flutter-Testing]
-    if: ${{ !cancelled() }}
+    if: ${{ !cancelled() && needs.Flutter-Testing.result == 'success' }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
