--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -125,7 +125,8 @@ jobs:
       - name: Remove generated files from coverage
         if: always()
         run: |
-          sed -i '/\.g\.dart/d' coverage/lcov.info
+          dart pub global activate remove_from_coverage
+          dart pub global run remove_from_coverage:remove_from_coverage -f coverage/lcov.info -r '\.g\.dart$'
       - name: Upload coverage artifact
         if: always()
         uses: actions/upload-artifact@v4
@@ -138,7 +139,7 @@ jobs:
     name: Merge Coverage Reports
     runs-on: ubuntu-latest
     needs: [Flutter-Testing]
-    if: ${{ !cancelled() }}
+    if: ${{ !cancelled() && needs.Flutter-Testing.result == 'success' }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
