--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,7 +42,8 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.talawa"
-        minSdkVersion flutter.minSdkVersion
+        // API 24 ensures full Google Tink compatibility (flutter_secure_storage v10 dependency)
+        minSdkVersion 24
 
         targetSdkVersion 36
         versionCode flutterVersionCode.toInteger()
