--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -101,6 +101,7 @@ dev_dependencies:
     sdk: flutter
   json_serializable: ^6.8.0
   lint: ^2.7.0
+  test: ^1.24.0
 
   mocktail_image_network: ^1.2.0
   network_image_mock: ^2.1.1
