--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -102,6 +102,7 @@ dev_dependencies:
   json_serializable: ^6.8.0
   lint: ^2.7.0
 
+
   mocktail_image_network: ^1.2.0
   network_image_mock: ^2.1.1
   normalize: ^0.9.1
@@ -109,6 +110,8 @@ dev_dependencies:
 
   talawa_lint:
     path: talawa_lint/
+  
+  test: ^1.24.4
 
   url_launcher_platform_interface: 2.3.2
 flutter:
