--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -217,11 +217,25 @@ jobs:
           echo "- Source branch may be incorrect please use develop as source branch."
           exit 1
 
+  Pre-Test-Checks-Pass:
+    name: All Pre-Test Checks Passed
+    runs-on: ubuntu-latest
+    if: ${{ always() && !failure() && !cancelled() }}
+    needs: [Check-Sensitive-Files, Check-Target-Branch, Count-Changed-Files]
+    steps:
+      - name: All pre-test checks passed
+        run: echo "All pre-test checks passed successfully"
+
   Flutter-Testing:
     name: Testing codebase
     runs-on: ubuntu-latest
     needs:
-      [Flutter-Codebase-Check, Python-Compliance, check-unused-dependencies]
+      [
+        Flutter-Codebase-Check,
+        Python-Compliance,
+        check-unused-dependencies,
+        Pre-Test-Checks-Pass,
+      ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
